# skrivesenteret-statistikk

./: LICENSE.txt  README.md  consultations_counter.py  pyproject.toml
templates/: skrivesenter.html
