[tool.poetry]
name = "skrivesenter"
version = "0.1.0"
description = ""
authors = ["NOne"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
openpyxl = "^3.0.7"
Flask = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
